tests/sideEffectingExpressions/invalid/semantic/TypeErr3.wacc
# invalid types

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = true ;
  b /= 2
end
